[gd_scene load_steps=3 format=3 uid="uid://ytjndn4v0ejc"]

[ext_resource type="Script" path="res://encounter/turn_manager/turn_manager.gd" id="1"]
[ext_resource type="Resource" uid="uid://brk05tih7005s" path="res://encounter/encounter_events.tres" id="2_yrrmh"]

[node name="TurnManager" type="Node2D"]
script = ExtResource("1")
encounter_events = ExtResource("2_yrrmh")

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Restore Phase" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restore Phase"

[node name="Draw Phase" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Draw Phase"

[node name="Wave Phase" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Spawn Phase"

[node name="Reward Phase" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reward Phase"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="button_down" from="MarginContainer/VBoxContainer/Restore Phase" to="." method="_on_Restore_Phase_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Draw Phase" to="." method="_on_Draw_Phase_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Wave Phase" to="." method="_on_Wave_Phase_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Reward Phase" to="." method="_on_Reward_Phase_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
